tests/semantic_error/gv2_atrib_vetor_escalar.g
/* erro: atribuicao de escalar a variavel vetor */
principal
[ v[3] : int; x : int; ]
{
  x = 5;
  v = x;
  novalinha;
}
